Fixed Horizontal Scroll

--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
   padding: 0;
   font-family: "Poppins", sans-serif;
 }
+body{
+  overflow-x: hidden;
+}
 p {
   font-size: 13px;
 }
